# rental-lookup-map

./: .gitignore  README.md  build_map.py  pyproject.toml  rebuild_map.sh  serve_map.py
.github/workflows/: update-map.yml
data/cache/: detail_enrichment.json  fake_location_ids.json  first_seen.json  photo_ratings.json  stars_and_dismissals.json
data/spike/: magicbricks-api-contract.md  nobroker-api-contract.md  nobroker-sample-response.json  osm-tags-verified.md
docs/plans/: 2026-04-13-rental-lookup-phase1.md  2026-04-13-rental-lookup-tdd-plan.md
docs/spikes/: housing-com-spike.md  magicbricks-spike.md
output/: map_template.html
rental_lookup/: __main__.py  dates.py  fb_scraper.py  geo.py  magicbricks.py  models.py  nobroker.py  photo_rater.py  run.py  scorer.py  star_merge.py
tests/: conftest.py  test_days_ago.py  test_geo.py  test_models.py  test_nobroker.py  test_scorer.py  test_star_merge.py
