[project]
name = "rental-lookup"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "osmnx>=2.0",
    "geopandas>=1.0",
    "geopy>=2.4",
    "pandas>=2.0",
    "tqdm>=4.66",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["rental_lookup*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
